--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,12 +9,12 @@
         <servlet-class>servlet.ArithmeticCalculatorServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>AgeCalculatorServlet</servlet-name>
-        <url-pattern>/age</url-pattern>
+        <servlet-name>ArithmeticCalculatorServlet</servlet-name>
+        <url-pattern>/ACal</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>ArithmeticCalculatorServlet</servlet-name>
-        <url-pattern>/ArithmeticCalculatorServlet</url-pattern>
+        <servlet-name>AgeCalculatorServlet</servlet-name>
+        <url-pattern>/age</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
