--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>ArithmeticCalculatorServlet</servlet-name>
-        <url-pattern>/ACal</url-pattern>
+        <url-pattern>/arithmetic</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>AgeCalculatorServlet</servlet-name>
